# agsvm

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.html  README.md  a.cfg  agsvm  bonemine.sh  c  classifier.txt  cmake_install.cmake  config.properties  config.properties.mnist  config.properties.rcv1  data.txt  deploy.sh  fvec_l2normalize  gossip_svm  kill.sh  perso.sh  prout  results.sh  run.sh  run_sag.sh  run_sag_shuffle_uniform_exact.sh  run_sgd.sh  run_sgd_decreasing.sh  run_stag_shuffle_uniform_exact.sh  s.sh  sparse_agsvm  sparse_gossip_svm  test_classifier  test_vector_sparse
results/: E.txt  res.tex
src/: agsvm.cpp  algebra.cpp  funcs.cpp  fvec_l2normalize.cpp  main.cpp  main_sparse.cpp  misc.cpp  misc_sparse.cpp  test_classifier.cpp
src/common/: jpg.h  math.cpp  math.h  matrix.h  matrix_double.cpp  matrix_double.h  matrix_float.cpp  matrix_float.h  matrix_old.cpp  matrix_old.h  multithread.cpp  multithread.h  plot.h  utils.cpp  utils.h
src/retin/feature/color/: ImageColor.cpp  ImageColor.h  ImageColor.java  ImageEqualization.cpp  ImageEqualization.h  ImageEqualization.java  ImageProcessing.h  ImageResample.h
src/retin/toolbox/algebra/: algebra.h  core.c  core.h  kpca.cpp  kpca.h  matrix.h  matrix_double.c  matrix_double.h  matrix_float.c  matrix_float.h  pca.cpp  pca.h  vector.h  vector_double.c  vector_double.h  vector_float.c  vector_float.h  vector_short.c  vector_short.h  vector_uchar.c  vector_uchar.h
src/retin/toolbox/core/: BiMap.java  FindFiles.java  Library.java  LoggerOutputStream.java  Misc.java  Modules.java  SharedMatrix.cpp  SharedMatrix.h  SharedMatrixDouble.cpp  SharedMatrixDouble.h  SymLink.java  arrays.h  auto_array_ptr.h  cache_queue.h  core.h  fvec_reader.h  fvec_writer.h  siftgeo_reader.h  siftgeo_writer.h  string_retin.h  system.h  thread_pool.h  thread_pool_valider.h  work_pool.h  work_queue.h  work_runnable.h  work_set.h  work_task.h
src/retin/toolbox/core/sharedmem/: matrix_reader.cpp  matrix_reader.h  matrix_writer.cpp  matrix_writer.h  shared_mem.cpp  shared_mem.h
src/retin/toolbox/imcodec/: FormatJPEG.java  ImageCodec.cpp  ImageCodec.h  ImageCodecJPEG.cpp  ImageCodecJPEG.h  ImageCodecPBM.cpp  ImageCodecPBM.h  ImageCodecPNG.cpp  ImageCodecPNG.h
src/vector_sparse/: MatrixSparse.cpp  MatrixSparse.h  VectorSparse.cpp  VectorSparse.h  test.cpp
